Avoid more text wrapping by using 20px more for the sidebar

--- a/debug_toolbar/static/debug_toolbar/css/toolbar.css
+++ b/debug_toolbar/static/debug_toolbar/css/toolbar.css
@@ -68,7 +68,7 @@
 
 #djDebug #djDebugToolbar {
     background-color: #111;
-    width: 200px;
+    width: 220px;
     z-index: 100000000;
     position: fixed;
     top: 0;
@@ -196,7 +196,7 @@
     position: fixed;
     margin: 0;
     top: 0;
-    right: 200px;
+    right: 220px;
     bottom: 0;
     left: 0px;
     background-color: #eee;
